# dropdown_menu

./: README.md  pyproject.toml
config/: settings.py  urls.py
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_remove_menu_parent_menuitem.py
menu/templates/menu/: home.html
