[tool.poetry]
name = "dropdown-menu"
version = "0.1.0"
description = "Django app with a template tag of dropdown menu"
authors = ["ShadeSWD <seawolfy60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
psycopg2 = "^2.9.9"
setuptools = "^69.0.3"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
